# =============================================================================
# omni-agent — Agent framework
# =============================================================================
# Implements the OMNI OS Agent primitive: autonomous AI-driven entity with
# declared policy, persistent context, capability tokens, and computational
# budget. Agents are first-class OS primitives, distinct from processes
# and threads.
# =============================================================================

[package]
name             = "omni-agent"
description      = "Agent framework for OMNI OS — autonomous AI entities with policy, context, capabilities, and budget."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types      = { workspace = true }
omni-capability = { workspace = true }
omni-runtime    = { workspace = true }
omni-sdk        = { workspace = true }
tokio           = { workspace = true }
async-trait     = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
