# =============================================================================
# omni-agent — Five-Agent framework (OIP-022)
# =============================================================================
# Five-agent architecture for OMNI OS: Orchestrator, Guidance, SysAdmin,
# Security & Performance, and Task. Each agent is a first-class OS primitive
# with declared policy, persistent context, capability tokens, computational
# budget, and sandboxed execution.
# =============================================================================

[package]
name             = "omni-agent"
description      = "Five-agent framework for OMNI OS — Orchestrator, Guidance, SysAdmin, Security, and Task agents."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types      = { workspace = true }
omni-capability = { workspace = true }
omni-runtime    = { workspace = true }
omni-sdk        = { workspace = true }
tokio           = { workspace = true }
async-trait     = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
