# =============================================================================
# omni-capability — Capability tokens for OMNI OS
# =============================================================================
# Macaroons-style attenuable, time-bounded, TEE-bound capability tokens.
# Used by every system action that crosses a trust boundary. See
# /docs/04-security-model.md § "Capability-based access control".
# =============================================================================

[package]
name             = "omni-capability"
description      = "Capability tokens for OMNI OS — Macaroons-style attenuable tokens with TEE binding."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
# Token canonical encoding is delegated to `omni-types::wire`, which
# wraps `postcard` 1.x with the project's canonical-encoding options.
# Direct `postcard::*` calls outside `omni-types::wire` are forbidden by
# the workspace clippy `disallowed-methods` lint (see `OIP-Serde-004`).
# The bloom filter used by the revocation list is implemented in-crate
# (see `revocation.rs`) so we avoid pulling in `std`-only crates such as
# `bloomfilter`.
[dependencies]
omni-types  = { workspace = true }
omni-crypto = { workspace = true }
serde       = { workspace = true }
# `postcard` 1.x is the canonical wire encoding. At M1 of `OIP-Serde-004`
# the call sites use `postcard::*` directly; at M2 they migrate to the
# `omni-types::wire` helper and this direct dependency is dropped in
# favour of `omni-types` re-export.
postcard    = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex      = { workspace = true }
