# =============================================================================
# omni-cmd-ifconfig — `ifconfig` command for OMNI OS
# =============================================================================
# Network interface configuration command: list interfaces, show details,
# set addresses, bring up/down.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - OIP-Net-N7.3 (ifconfig command specification)
# =============================================================================

[package]
name             = "omni-cmd-ifconfig"
description      = "ifconfig command for OMNI OS — network interface configuration."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
