# =============================================================================
# omni-cmd-nc — `nc` (netcat) command for OMNI OS
# =============================================================================
# TCP/UDP network utility: connect mode, listen mode, UDP toggle.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - OIP-Net-N7.11 (nc command specification)
# =============================================================================

[package]
name             = "omni-cmd-nc"
description      = "nc (netcat) command for OMNI OS — TCP/UDP network utility."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
