# =============================================================================
# omni-cmd-scp — `scp` command scaffold for OMNI OS
# =============================================================================
# SCP file transfer scaffold: path types and argument parsing only.
# Actual transfer logic is deferred to a future sprint after the SSH scaffold
# is fleshed out.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - OIP-Net-N7.10 (scp command specification — scaffold)
# =============================================================================

[package]
name             = "omni-cmd-scp"
description      = "scp command scaffold for OMNI OS — path types and arg parsing."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
