# =============================================================================
# omni-cmd-ssh — `ssh` command scaffold for OMNI OS
# =============================================================================
# SSH client scaffold: packet framing layer and type definitions only.
# Full SSH-2 protocol implementation is deferred to a future sprint.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - RFC 4253 (SSH Transport Layer Protocol)
#   - OIP-Net-N7.9 (ssh command specification — scaffold)
# =============================================================================

[package]
name             = "omni-cmd-ssh"
description      = "ssh command scaffold for OMNI OS — packet framing and types."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
