# =============================================================================
# omni-cmd-traceroute — `traceroute` command for OMNI OS
# =============================================================================
# Provides ICMP TTL-based route discovery: probe packet construction, response
# parsing, hop formatting, and argument parsing.
#
# Architecture:
#   `no_std + alloc` library crate following the driver/command pattern.
#   Zero external production dependencies — pure logic built on `omni-types`.
#
# References:
#   - RFC 792 (ICMP)
#   - OIP-Net-N7.2 (traceroute command specification)
# =============================================================================

[package]
name             = "omni-cmd-traceroute"
description      = "traceroute command for OMNI OS — ICMP TTL-based route discovery."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
