# =============================================================================
# omni-cmd-wget — `wget` command for OMNI OS
# =============================================================================
# File downloader command: URL parsing, filename extraction, range headers,
# progress formatting, argument parsing.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - RFC 7233 (HTTP Range Requests)
#   - OIP-Net-N7.8 (wget command specification)
# =============================================================================

[package]
name             = "omni-cmd-wget"
description      = "wget command for OMNI OS — file downloader."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
