# =============================================================================
# omni-crypto — Cryptographic primitives for OMNI OS
# =============================================================================
# Wraps battle-tested cryptographic libraries behind OMNI-specific traits.
# Sub-modules cover symmetric / asymmetric crypto, KDF, AEAD, signatures,
# format-preserving encryption, and zk-SNARK predicates.
# =============================================================================

[package]
name             = "omni-crypto"
description      = "Cryptographic primitives for OMNI OS — AEAD, signatures, KDF, FPE, zk-SNARK predicates."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

# -----------------------------------------------------------------------------
# Dependencies — RustCrypto family only.
# -----------------------------------------------------------------------------
# Decision recorded 2026-05-10: `ring` is intentionally NOT used. See
# /docs/09-tech-specifications.md § "Cryptography" for the rationale.
[dependencies]
omni-types       = { workspace = true }
ed25519-dalek    = { workspace = true }
x25519-dalek     = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2             = { workspace = true }
sha3             = { workspace = true }
blake3           = { workspace = true }
hkdf             = { workspace = true }
argon2           = { workspace = true }
# CSPRNG: `rand_core` is the trait surface, `getrandom` is the platform
# bridge. Together they back ephemeral key generation and nonce minting.
rand_core        = { workspace = true }
getrandom        = { workspace = true }
# Constant-time equality + key-material zeroization.
subtle           = { workspace = true }
zeroize          = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# Hex used for parsing RFC test vectors.
hex      = { workspace = true }
